--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
-
+{
+  "name": "Sticky Notes",
+  "short_name": "Sticky",
+  "description": "A simple and responsive sticky note web app.",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#f4f4f4",
+  "theme_color": "#28a745",
+  "icons": [
+    {
+      "src": "/images/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
